tests/fixtures/invalid/pow_list_none_int.py
# Cannot call pow() with List[int], None, Int
x = pow([1, 2, 3], None, 1)
